Closed Bug 992488 Opened 10 years ago Closed 10 years ago

ASSERTION: Pseudo-element snuck into SelectorMatches? when running browser_ruleview_pseudoelement.js

Categories

(Core :: CSS Parsing and Computation, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla31

People

(Reporter: ttaubert, Assigned: heycam)

Details

Attachments

(1 file)

When running:

./mach mochitest-browser browser/devtools/styleinspector/test/browser_ruleview_pseudoelement.js

I see lots of assertions:

[14396] ###!!! ASSERTION: Pseudo-element snuck into SelectorMatches?: '!aSelector->IsPseudoElement()', file layout/style/nsCSSRuleProcessor.cpp, line 1704
SelectorMatches (layout/style/nsCSSRuleProcessor.cpp:1705)
nsCSSRuleProcessor::SelectorListMatches(mozilla::dom::Element*, TreeMatchContext&, nsCSSSelectorList*) (layout/style/nsCSSRuleProcessor.cpp:3487)
inDOMUtils::SelectorMatchesElement(nsIDOMElement*, nsIDOMCSSStyleRule*, unsigned int, bool*) (layout/inspector/inDOMUtils.cpp:380)
NS_InvokeByIndex (xpcom/reflect/xptcall/src/md/unix/xptcinvoke_x86_64_unix.cpp:164)
CallMethodHelper::Invoke() (js/xpconnect/src/XPCWrappedNative.cpp:2407)
CallMethodHelper::Call() (js/xpconnect/src/XPCWrappedNative.cpp:1747)
XPCWrappedNative::CallMethod(XPCCallContext&, XPCWrappedNative::CallMode) (js/xpconnect/src/XPCWrappedNative.cpp:1714)
XPC_WN_CallMethod(JSContext*, unsigned int, JS::Value*) (js/xpconnect/src/XPCWrappedNativeJSOps.cpp:1282)
js::CallJSNative(JSContext*, bool (*)(JSContext*, unsigned int, JS::Value*), JS::CallArgs const&) (js/src/jscntxtinlines.h:239)
js::Invoke(JSContext*, JS::CallArgs, js::MaybeConstruct) (js/src/vm/Interpreter.cpp:476)
Interpret (js/src/vm/Interpreter.cpp:2619)
js::RunScript(JSContext*, js::RunState&) (js/src/vm/Interpreter.cpp:423)
js::Invoke(JSContext*, JS::CallArgs, js::MaybeConstruct) (js/src/vm/Interpreter.cpp:495)
js_fun_apply(JSContext*, unsigned int, JS::Value*) (js/src/jsfun.cpp:1017)
js::CallJSNative(JSContext*, bool (*)(JSContext*, unsigned int, JS::Value*), JS::CallArgs const&) (js/src/jscntxtinlines.h:239)
js::Invoke(JSContext*, JS::CallArgs, js::MaybeConstruct) (js/src/vm/Interpreter.cpp:476)
js::Invoke(JSContext*, JS::Value const&, JS::Value const&, unsigned int, JS::Value const*, JS::MutableHandle<JS::Value>) (js/src/vm/Interpreter.cpp:532)
js::DirectProxyHandler::call(JSContext*, JS::Handle<JSObject*>, JS::CallArgs const&) (js/src/jsproxy.cpp:465)
js::CrossCompartmentWrapper::call(JSContext*, JS::Handle<JSObject*>, JS::CallArgs const&) (js/src/jswrapper.cpp:465)
js::Proxy::call(JSContext*, JS::Handle<JSObject*>, JS::CallArgs const&) (js/src/jsproxy.cpp:2637)
js::proxy_Call(JSContext*, unsigned int, JS::Value*) (js/src/jsproxy.cpp:3040)
js::CallJSNative(JSContext*, bool (*)(JSContext*, unsigned int, JS::Value*), JS::CallArgs const&) (js/src/jscntxtinlines.h:239)
js::Invoke(JSContext*, JS::CallArgs, js::MaybeConstruct) (js/src/vm/Interpreter.cpp:469)
js::Invoke(JSContext*, JS::Value const&, JS::Value const&, unsigned int, JS::Value const*, JS::MutableHandle<JS::Value>) (js/src/vm/Interpreter.cpp:532)
DoCallFallback (js/src/jit/BaselineIC.cpp:8134)
UNKNOWN 0x7f63aecc6ccb
Assignee: nobody → cam
Attached patch patchSplinter Review
Attachment #8406044 - Flags: review?(bzbarsky)
Comment on attachment 8406044 [details] [diff] [review]
patch

r=me
Attachment #8406044 - Flags: review?(bzbarsky) → review+
https://hg.mozilla.org/mozilla-central/rev/1515ebdea676
Status: NEW → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla31
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: